test/analyze/type_check/high_order_functions/basic.exp
Error: Expected type `Unit -> a` but found `Int -> Bool`
test/analyze/type_check/high_order_functions/basic.myte:12:10-19
 12 |   map((), intToBool);
    |           ^^^^^^^^^