test/analyze/type_check/high_order_functions/basic.myte
module test

fun intToBool(x: Int): Bool = true

fun map<T, U>(x: T, f: T -> U): U = f(x)

fun testMap() {
  // Success
  map(1, intToBool);

  // Failure
  map((), intToBool);
}

fun main() {}